basic websocket setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,17 @@
-[project]
+[tool.poetry]
 name = "leaderboard"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Your Name",email = "you@example.com"}
-]
+authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "django-redis (>=5.4.0,<6.0.0)"
-]
+packages = [{include = "boards"}]
 
+[tool.poetry.dependencies]
+python = ">=3.13"
+django = "^5.1.6"
+django-redis = ">=5.4.0,<6.0.0"
+channels = ">=4.2.0,<5.0.0"
+daphne = "^4.1.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
