--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "^5.1.6"
 django-redis = ">=5.4.0,<6.0.0"
 channels = ">=4.2.0,<5.0.0"
 daphne = "^4.1.2"
+channels-redis = "^4.2.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
